@@ -165,7 +165,7 @@ class InfoAction extends FormlessAction {
 	 * @return array
 	 */
 	protected function pageInfo() {
-		global $wgContLang, $wgRCMaxAge, $wgMemc, $wgUnwatchedPageThreshold;
+		global $wgContLang, $wgRCMaxAge, $wgMemc, $wgUnwatchedPageThreshold, $wgPageInfoTransclusionLimit;
 
 		$user = $this->getUser();
 		$lang = $this->getLanguage();
@@ -460,11 +460,17 @@ class InfoAction extends FormlessAction {
 
 		$localizedList = Html::rawElement( 'ul', array(), implode( '', $listItems ) );
 		$hiddenCategories = $this->page->getHiddenCategories();
-		$transcludedTemplates = $title->getTemplateLinksFrom();
 
-		if ( count( $listItems ) > 0
-			|| count( $hiddenCategories ) > 0
-			|| count( $transcludedTemplates ) > 0 ) {
+		if (
+			count( $listItems ) > 0 ||
+			count( $hiddenCategories ) > 0 ||
+			$pageCounts['transclusion']['from'] > 0 ||
+			$pageCounts['transclusion']['to'] > 0
+		) {
+			$options = array( 'LIMIT' => $wgPageInfoTransclusionLimit );
+			$transcludedTemplates = $title->getTemplateLinksFrom( $options );
+			$transcludedTargets = $title->getTemplateLinksTo( $options );
+
 			// Page properties
 			$pageInfo['header-properties'] = array();
 
@@ -486,11 +492,44 @@ class InfoAction extends FormlessAction {
 			}
 
 			// Transcluded templates
-			if ( count( $transcludedTemplates ) > 0 ) {
+			if ( $pageCounts['transclusion']['from'] > 0 ) {
+				if ( $pageCounts['transclusion']['from'] > count( $transcludedTemplates ) ) {
+					$more = $this->msg( 'morenotlisted' )->escaped();
+				} else {
+					$more = null;
+				}
+
 				$pageInfo['header-properties'][] = array(
 					$this->msg( 'pageinfo-templates' )
-						->numParams( count( $transcludedTemplates ) ),
-					Linker::formatTemplates( $transcludedTemplates )
+						->numParams( $pageCounts['transclusion']['from'] ),
+					Linker::formatTemplates(
+						$transcludedTemplates,
+						false,
+						false,
+						$more )
+				);
+			}
+
+			if ( $pageCounts['transclusion']['to'] > 0 ) {
+				if ( $pageCounts['transclusion']['to'] > count( $transcludedTargets ) ) {
+					$more = Linker::link(
+						$whatLinksHere,
+						$this->msg( 'moredotdotdot' )->escaped(),
+						array(),
+						array( 'hidelinks' => 1, 'hideredirs' => 1 )
+					);
+				} else {
+					$more = null;
+				}
+
+				$pageInfo['header-properties'][] = array(
+					$this->msg( 'pageinfo-transclusions' )
+						->numParams( $pageCounts['transclusion']['to'] ),
+					Linker::formatTemplates(
+						$transcludedTargets,
+						false,
+						false,
+						$more )
 				);
 			}
 		}
@@ -607,6 +646,24 @@ class InfoAction extends FormlessAction {
 			$result['subpages']['total'] = $result['subpages']['redirects']
 				+ $result['subpages']['nonredirects'];
 		}
+
+		// Counts for the number of transclusion links (to/from)
+		$result['transclusion']['to'] = (int) $dbr->selectField(
+			'templatelinks',
+			'COUNT(tl_from)',
+			array(
+				'tl_namespace' => $title->getNamespace(),
+				'tl_title' => $title->getDBkey()
+			),
+			__METHOD__
+		);
+
+		$result['transclusion']['from'] = (int) $dbr->selectField(
+			'templatelinks',
+			'COUNT(*)',
+			array( 'tl_from' => $title->getArticleID() ),
+			__METHOD__
+		);
 
 		wfProfileOut( __METHOD__ );
 		return $result;
