@@ -167,6 +167,7 @@ $wgMessageStructure = array(
 		'newwindow',
 		'cancel',
 		'moredotdotdot',
+		'morenotlisted',
 		'mypage',
 		'mytalk',
 		'anontalk',
@@ -2713,6 +2714,7 @@ $wgMessageStructure = array(
 		'pageinfo-magic-words',
 		'pageinfo-hidden-categories',
 		'pageinfo-templates',
+		'pageinfo-transclusions',
 		'pageinfo-footer',
 		'pageinfo-toolboxlink',
 		'pageinfo-redirectsto',
